Fixed Pokemon width, made name overflow wrap and shrinked type boxes font size

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 [id="type"] {
-  font-size: 11px;
+  font-size: 10px;
 }
 
 * {
